# xiangqi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bench.sh  build.sh  test.sh
benchmarks/: bench_possible_moves.cc
game-engine/: CMakeLists.txt  build.sh  game.cc  game.h  moves.cc  moves.h  types.h
game-engine/cmake/modules/: AddSwift.cmake  InitializeSwift.cmake
game-engine/include/xiangqi/: agent.h  board.h  game.h  module.modulemap  moves.h  types.h
game-engine/include/xiangqi/internal/: moves.h
game-engine/include/xiangqi/internal/agents/: mcts.h  random.h
game-engine/lib/xiangqi/: CMakeLists.txt  agent.cc  board.cc  game.cc
game-engine/lib/xiangqi/internal/: moves.cc
game-engine/lib/xiangqi/internal/agents/: mcts.cc  random.cc
game-engine/src/: CMakeLists.txt  game.cc  main.cc  moves.cc
game-engine/src/internal/: moves.cc
game-engine/tests/: CMakeLists.txt  test_board.cc  test_game.cc  test_possible_moves.cc
include/xiangqi/: agent.h  board.h  board_c.h  game.h  types.h  types_c.h
include/xiangqi/internal/: moves.h
include/xiangqi/internal/agents/: mcts.h  random.h  util.h
ios/Xiangqi/: AppDelegate.swift  GameScene.swift  GameViewController.swift
ios/Xiangqi.xcodeproj/: project.pbxproj
ios/Xiangqi.xcodeproj/xcshareddata/xcschemes/: Xiangqi.xcscheme
ios/Xiangqi/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/XiangqiTests/: XiangqiTests.swift
ios/XiangqiUITests/: XiangqiUITests.swift  XiangqiUITestsLaunchTests.swift
lib/xiangqi/: CMakeLists.txt  agent.cc  board.c  board.cc  game.cc
lib/xiangqi/internal/: moves.cc
lib/xiangqi/internal/agents/: mcts.cc  random.cc  util.cc
src/: main.cc
tests/: test_board.cc  test_game.cc  test_possible_moves.cc
